# ntuee-mailer

./: .gitignore  LICENSE  README.md  config-default.ini  pyproject.toml
ntuee_mailer/: AutoMailer.py  Letter.py  __main__.py  config-default.ini  globals.py  main.py  utils.py
ntuee_mailer/template_letter/: content.html  recipients.csv
template_letter/: config.yml  log.txt
