[tool.poetry]
name = "ntuee-mailer"
version = "2.0.6"
description = "an auto mailer to send emails in batch for you"
authors = ["zhuang-jia-xu <76544194+zhuang-jia-xu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NTUEE-SAAD/mailing"
packages = [{ include = "ntuee_mailer" }]

[tool.poetry.scripts]
ntuee-mailer = "ntuee_mailer.main:app"

[tool.poetry.dependencies]
python = "^3.7"
Cerberus = "1.3.4"
email-validator = "1.2.1"
PyYAML = "6.0"
rich = "12.5.1"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.dev-dependencies]
black = { version = "^22.6.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
